fixed gap at top reworked scrolling in timeline and added it to files

--- a/website/dev/css/files.css
+++ b/website/dev/css/files.css
@@ -3,13 +3,18 @@
   position: relative;
   width:100%;
   height:100%;
+  overflow: hidden;
 }
 
 #files-list{
   position: relative;
-  transform: translate(-50%, -50%);
-  top:50%;
-  left:50%;
+  transform: translate(0, -50%);
+  top: 50%;
+  max-height: 100%;
+  overflow-y: auto;
+  width: 40%;
+  left: 30%;
+  right: 30%;
 }
 
 #files-list-title{
@@ -21,19 +26,21 @@
   text-align:center;
 }
 
-.files-list-item{
-  margin-top:1.5%;
-  margin-bottom:1.5%;
+#files-list-items{
+  position:relative;
+  margin: 1%;
+}
+
+.files-list-items-item{
+  margin-top:3%;
+  margin-bottom:3%;
   box-shadow: 0 0 0.4em 0.1em #FF0000;
   position:relative;
   height:5%;
-  width:40%;
-  left:30%;
-  right:30%;
   background-color: #FFFFFF;
 }
 
-.files-list-item-img{
+.files-list-items-type-folder-img{
   height: 80%;
   width: 5.2%; /*TODO find exact value*/
   position: absolute;
@@ -42,7 +49,7 @@
   top: 50%;
 }
 
-.files-list-item-text{
+.files-list-items-item-text{
   letter-spacing: 0.05em;
   color: #000000;
   font-size:1em;
@@ -52,6 +59,6 @@
   left: 50%;
 }
 
-.files-list-item-type-folder{
+.files-list-items-type-folder{
   background-color: #729FCF;
 }
