--- a/website/dev/css/index.css
+++ b/website/dev/css/index.css
@@ -1,11 +1,11 @@
 .pages{
-  position: relative;
   width:100%;
   height:100%;
+  overflow:hidden;
 }
 
 .body{
-  position: absolute;
+  position: relative;
   transform: translate(-50%, -50%);
   left: 50%;
   top: 50%;
