--- a/website/dev/css/timeline.css
+++ b/website/dev/css/timeline.css
@@ -1,8 +1,8 @@
 #sections{
   background-color: #7A7A7A;
-  position: relative;
   width:100%;
   height:100%;
+  overflow: hidden;
 }
 
 #sections-body{
@@ -12,7 +12,6 @@
   left: 50%;
   width: 100%;
   height: 70%;
-  overflow: hidden;
 }
 
 #sections-body-title{
@@ -25,28 +24,31 @@
   text-align: center;
 }
 
-#sections-body-tiles{
-  display: block;
-  position: relative;
+#sections-body-scrollbox{
+  overflow-y: auto;
   height: 60%;
-  width: 500%;
-  transition-duration:15s;
-  transition-timing-function: cubic-bezier(1,0,1,1);
 }
 
-#sections-body-tiles:active{
-  transition-duration:15s;
-  transition-timing-function:ease;
-  transform: translateX(-100%);
+#sections-body-scrollbox-tiles{
+  display: block;
+  position: relative;
+  height: 100%;
+  width: 120%;
 }
+
+/*#sections-body-scrollbox-tiles:active{
+  transition-duration:15s;
+  transition-timing-function: cubic-bezier(1,0,1,1);
+  transform: translateX(-100%);
+}*/
 
 .tiles{
   box-shadow: 0 0 0.4em 0.1em #FF0000;
   position: relative;
   display: inline-block;
-  width: 5%;
-  height: 90%;
-  margin: 0.2%;
+  width: 18%;
+  height: 88%;
+  margin: 1%;
   background-image: url("../img/bg-home.jpg");
   background-size: auto 100%;
   background-repeat: no-repeat;
